minor data updates

--- a/create_gnn_data.ipynb
+++ b/create_gnn_data.ipynb
@@ -1025,6 +1025,7 @@
     "        x[idx2] = 1\n",
     "    \n",
     "    data_obj = Data(x=x, edge_index=edge_index, edge_attr=edge_attr, y=edge_labels)\n",
+    "    data_obj.file_name = training_sample\n",
     "    data_list.append(data_obj)"
    ]
   },
