--- a/generate_baseline_spras_nodes.ipynb
+++ b/generate_baseline_spras_nodes.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
-    "from math import ceil"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +24,12 @@
     "    node_df = pd.DataFrame(node_list, columns=['NODEID'])\n",
     "    node_df['prize'] = 1.0\n",
     "    filepath = 'baseline-spras-nodes/' + og_filename + '_nodes.txt'\n",
-    "    node_df.to_csv(filepath, sep='\\t', index=False)\n",
-    "    return (og_filename, len(node_df))"
+    "    node_df.to_csv(filepath, sep='\\t', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,37 +40,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vitamin_b6_metabolis_train_7692\n",
-      "vitamin_b6_metabolis_train_7692\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "training_files = [f for f in os.listdir('training-samples') if f.endswith('.csv')]\n",
-    "\n",
     "for sample in training_files:\n",
     "    og_filename = sample[:-4]\n",
     "    sample_df = pd.read_csv('training-samples/' + sample, sep='\\t')\n",
-    "    val = generate_node_list(sample_df, og_filename)"
+    "    generate_node_list(sample_df, og_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total files: 820\n"
+      "Total files: 821\n"
      ]
     }
    ],
@@ -82,107 +70,11 @@
     "num_files = len(files)\n",
     "print(f\"Total files: {num_files}\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**EDA on number of nodes for test OmicsIntegrator2 run:**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n",
-      "alanine,_aspartate_a_train_1510_nodes.txt\n",
-      "12\n",
-      "alanine,_aspartate_a_train_2535_nodes.txt\n",
-      "15\n",
-      "aminoacyl-trna_biosy_train_1565_nodes.txt\n",
-      "16\n",
-      "aminoacyl-trna_biosy_train_2796_nodes.txt\n",
-      "18\n",
-      "arachidonic_acid_met_train_4290_nodes.txt\n",
-      "25\n",
-      "arginine_and_proline_train_1159_nodes.txt\n",
-      "31\n",
-      "drug_metabolism_-_cy_train_1576_nodes.txt\n",
-      "40\n",
-      "purine_metabolism_train_1035_nodes.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "node_files = [f for f in os.listdir('baseline-spras-nodes') if f.endswith('.txt')]\n",
-    "longest_file = None\n",
-    "num = -999\n",
-    "for node_file in node_files:\n",
-    "   with open('baseline-spras-nodes/' + node_file,'r') as file:\n",
-    "      li = file.readlines()\n",
-    "   if len(li) > num:\n",
-    "      num = len(li)\n",
-    "      print(num)\n",
-    "      print(node_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "node_files = [f for f in os.listdir('baseline-spras-nodes') if f.endswith('.txt')]\n",
-    "details = []\n",
-    "for node_file in node_files:\n",
-    "    with open('baseline-spras-nodes/' + node_file,'r') as file:\n",
-    "      li = file.readlines()\n",
-    "    tup = (node_file, len(li))\n",
-    "    details.append(tup)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Min: 1\n",
-      "Max: 40\n",
-      "Average: 8.96829268292683\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Extract all the second elements\n",
-    "values = [x[1] for x in details]\n",
-    "\n",
-    "# Calculate min, max, and average\n",
-    "min_val = min(values)\n",
-    "max_val = max(values)\n",
-    "avg_val = sum(values) / len(values)\n",
-    "\n",
-    "min_keys =  [x[0] for x in details if x[1] == 1]\n",
-    "average_keys = [x[0] for x in details if x[1] == ceil(avg_val)]\n",
-    "\n",
-    "# Print results\n",
-    "print(\"Min:\", min_val)\n",
-    "print(\"Max:\", max_val)\n",
-    "print(\"Average:\", avg_val)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
