--- a/spras_baseline_eval.ipynb
+++ b/spras_baseline_eval.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "0c3977a6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.metrics import precision_recall_curve\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fc67337",
+   "metadata": {},
+   "source": [
+    "### TEST:"
    ]
   },
   {
@@ -463,6 +473,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5cb944d9",
+   "metadata": {},
+   "source": [
+    "### ACTUAL IMPLEMENTATION:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "247544db",
    "metadata": {},
    "source": [
@@ -477,10 +495,69 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "79722dea",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "folder_path_1 = 'processed-data/spras-ml-ensembles'\n",
+    "spras_ensemble_pathways_list = [f for f in os.listdir(folder_path_1) if f.endswith('.txt')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b4c906b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "drug_metab\n",
+      "fatty_acid\n",
+      "fatty_acid\n",
+      "glycosamin\n",
+      "glycosamin\n",
+      "glycosphin\n",
+      "glycosphin\n",
+      "phenylalan\n",
+      "valine__le\n",
+      "73\n",
+      "73\n"
+     ]
+    }
+   ],
+   "source": [
+    "folder_path_2 = 'processed-data/processed-pc-individual-pathways'\n",
+    "pc_processed_list = [f for f in os.listdir(folder_path_2) if f.endswith('.txt')]\n",
+    "list_labels = []\n",
+    "for filename in pc_processed_list:\n",
+    "    base = filename[:10]\n",
+    "    label = re.sub(r'\\W+', '_', base).strip('_')\n",
+    "    if label not in list_labels:\n",
+    "        list_labels.append(label)\n",
+    "    else:\n",
+    "        print(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c61cad4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for pathway in spras_ensemble_pathways_list:\n",
+    "\n",
+    "    # read ensemble pathway as df\n",
+    "    file_path = os.path.join(folder_path_1, pathway)\n",
+    "    ensemble_pathway_df = pd.read_csv(file_path, sep='\\t')\n",
+    "\n",
+    "    # match ensemble pathway to processed pathway commons file\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
