updated prc code and graphs

--- a/spras_baseline_eval.ipynb
+++ b/spras_baseline_eval.ipynb
@@ -201,15 +201,24 @@
     "        # MAKE THE PRC TABLE:\n",
     "        ensemble_df.drop(columns=['Direction'], inplace=True)\n",
     "        ensemble_df['y_true'] = 0\n",
-    "        pc_ytrue_pairs = set(zip(union_ppi['Node1'], union_ppi['Node2']))\n",
+    "        # comparing ensemble df to pathway commons --> set y_true to 1 and freq to 0 for missing pairs\n",
+    "        pc_ytrue_pairs = set(zip(pc_df['Node1'], pc_df['Node2']))\n",
     "        ensemble_df.loc[ensemble_df[['Node1', 'Node2']].apply(tuple, axis=1).isin(pc_ytrue_pairs), 'y_true'] = 1\n",
-    "        # only build a frame if something is missing\n",
-    "        missing_pairs = pc_ytrue_pairs.difference(zip(ensemble_df['Node1'], ensemble_df['Node2']))\n",
-    "        if missing_pairs:                      \n",
-    "            new_rows = pd.DataFrame(list(missing_pairs), columns=['Node1', 'Node2'])\n",
+    "        pc_missing_pairs = pc_ytrue_pairs.difference(zip(ensemble_df['Node1'], ensemble_df['Node2']))\n",
+    "        if pc_missing_pairs:                      \n",
+    "            new_rows = pd.DataFrame(list(pc_missing_pairs), columns=['Node1', 'Node2'])\n",
     "            new_rows['Frequency'] = 0          \n",
     "            new_rows['y_true']   = 1\n",
     "            prc_df = pd.concat([ensemble_df, new_rows], ignore_index=True)\n",
+    "        # comparing ensemble df to union ppi --> set y_true to 0 and freq to 0 for missing pairs\n",
+    "        union_ppi_pairs = set(zip(union_ppi['Node1'], union_ppi['Node2']))\n",
+    "        ensemble_pairs  = set(zip(ensemble_df['Node1'],  ensemble_df['Node2']))\n",
+    "        union_missing_pairs = union_ppi_pairs.difference(ensemble_pairs)\n",
+    "        missing_df = pd.DataFrame(list(union_missing_pairs), columns=['Node1','Node2'])\n",
+    "        missing_df['y_true'] = 0\n",
+    "        missing_df['Frequency']   = 0\n",
+    "        prc_df = pd.concat([prc_df, missing_df], ignore_index=True)\n",
+    "        #print(prc_df)\n",
     "\n",
     "        # calculate prevalence --> probability of randomly drawing a positive example from your dataset\n",
     "        # num positives --> taken from pathwaycommons individual\n",
