csv for all oi2 avg precision, todo: run

--- a/spras_baseline_eval.ipynb
+++ b/spras_baseline_eval.ipynb
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "a865ec9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.metrics import precision_recall_curve\n",
+    "from sklearn.metrics import precision_recall_curve, average_precision_score\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import re\n",
@@ -191,7 +191,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "2edfe969",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>avg_precision</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [filename, avg_precision]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_prec_results = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5c61cad4",
    "metadata": {},
    "outputs": [
@@ -265,6 +316,13 @@
     "        # num positives --> taken from pathwaycommons individual\n",
     "        num_pos = len(pc_df)\n",
     "        prevalence = num_pos/union_ppi_length\n",
+    "\n",
+    "        # calculate avg precision score and add to df, make new row\n",
+    "        ap = average_precision_score(prc_df['y_true'], prc_df['Frequency'])\n",
+    "        avg_prec_results.append({\n",
+    "        'Sample': training_sample_subfolder.replace('-ml',''),\n",
+    "        'AveragePrecision': ap\n",
+    "        })\n",
     "    \n",
     "        # plot and save precision recall curve\n",
     "        precision, recall, _ = precision_recall_curve(prc_df['y_true'], prc_df['Frequency'])\n",
@@ -283,7 +341,14 @@
     "        clean_name = training_sample_subfolder.replace('-ml', '')\n",
     "        save_path = os.path.join('spras-baseline-eval-prc', f\"{clean_name}_prc_curve.png\")\n",
     "        plt.savefig(save_path)\n",
-    "        plt.close()"
+    "        plt.close()\n",
+    "    \n",
+    "avg_prec_df = pd.DataFrame(avg_prec_results)\n",
+    "out_path = os.path.join('processed-data', 'oi2_summary_ap_scores.csv')\n",
+    "avg_prec_df.to_csv(out_path, index=False, sep='\\t')\n",
+    "print(f\"Wrote summary of average-precision scores to {out_path}\")\n",
+    "\n",
+    "#TODO run"
    ]
   },
   {
@@ -364,7 +429,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -378,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
