adding boxplot code

--- a/spras_baseline_eval.ipynb
+++ b/spras_baseline_eval.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a865ec9e",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "a3d580bd",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "71bd9c81",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "ffdc4bf8",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "52beb169",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "202090"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "c16614a4",
    "metadata": {},
    "outputs": [
@@ -191,58 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2edfe969",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>filename</th>\n",
-       "      <th>avg_precision</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [filename, avg_precision]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "avg_prec_results = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5c61cad4",
    "metadata": {},
    "outputs": [
@@ -261,7 +220,8 @@
       "Skipping subfolder 'drug_metab_7207-ml': no matching .txt file with prefix 'drug_metab'\n",
       "Skipping subfolder 'drug_metab_7643-ml': no matching .txt file with prefix 'drug_metab'\n",
       "Skipping subfolder 'drug_metab_7684-ml': no matching .txt file with prefix 'drug_metab'\n",
-      "Skipping subfolder 'drug_metab_8702-ml': no matching .txt file with prefix 'drug_metab'\n"
+      "Skipping subfolder 'drug_metab_8702-ml': no matching .txt file with prefix 'drug_metab'\n",
+      "Wrote summary of average-precision scores to processed-data\\oi2_summary_ap_scores.csv\n"
      ]
     }
    ],
@@ -346,9 +306,7 @@
     "avg_prec_df = pd.DataFrame(avg_prec_results)\n",
     "out_path = os.path.join('processed-data', 'oi2_summary_ap_scores.csv')\n",
     "avg_prec_df.to_csv(out_path, index=False, sep='\\t')\n",
-    "print(f\"Wrote summary of average-precision scores to {out_path}\")\n",
-    "\n",
-    "#TODO run"
+    "print(f\"Wrote summary of average-precision scores to {out_path}\")\n"
    ]
   },
   {
