this is a mess!!!!!!

--- a/spras_baseline_eval.ipynb
+++ b/spras_baseline_eval.ipynb
@@ -35,7 +35,8 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import re\n",
-    "import shutil"
+    "import shutil\n",
+    "import glob"
    ]
   },
   {
@@ -84,7 +85,7 @@
    "source": [
     "pc_processed_list = [f for f in os.listdir(processed_pc_pathways_folder) if f.endswith('.txt')]\n",
     "\n",
-    "# Create a map of cleaned base names to file names\n",
+    "# map of cleaned base names to file names\n",
     "file_map = {}\n",
     "for filename in pc_processed_list:\n",
     "    base = filename[:10]\n",
@@ -282,27 +283,28 @@
     "        trimmed = os.path.basename(matched_pc_pathway)\n",
     "        avg_prec_results.append({\n",
     "        'Sample': trimmed,\n",
-    "        'AveragePrecision': ap\n",
+    "        'AveragePrecision': ap,\n",
+    "        'dataset_label': training_sample_subfolder\n",
     "        })\n",
     "    \n",
     "        # plot and save precision recall curve\n",
     "        precision, recall, _ = precision_recall_curve(prc_df['y_true'], prc_df['Frequency'])\n",
-    "        plt.figure()\n",
-    "        plt.plot(recall, precision, linewidth=2)\n",
-    "        # add prevalence as a horizontal dotted line\n",
-    "        plt.axhline(prevalence, color='gray', linestyle='--', label=f'Prevalence = {prevalence:.5f}')\n",
-    "        # force both axes from 0 to 1\n",
-    "        plt.xlim(0, 1)\n",
-    "        plt.ylim(0, 1)\n",
-    "        plt.xlabel('Recall')\n",
-    "        plt.ylabel('Precision')\n",
-    "        plt.title(f'Precision-Recall Curve for {training_sample_subfolder}')\n",
-    "        plt.grid(True)\n",
-    "        plt.legend(loc='lower left')\n",
-    "        clean_name = training_sample_subfolder.replace('-ml', '')\n",
-    "        save_path = os.path.join('spras-baseline-eval-prc', f\"{clean_name}_prc_curve.png\")\n",
-    "        plt.savefig(save_path)\n",
-    "        plt.close()\n",
+    "        # plt.figure()\n",
+    "        # plt.plot(recall, precision, linewidth=2)\n",
+    "        # # add prevalence as a horizontal dotted line\n",
+    "        # plt.axhline(prevalence, color='gray', linestyle='--', label=f'Prevalence = {prevalence:.5f}')\n",
+    "        # # force both axes from 0 to 1\n",
+    "        # plt.xlim(0, 1)\n",
+    "        # plt.ylim(0, 1)\n",
+    "        # plt.xlabel('Recall')\n",
+    "        # plt.ylabel('Precision')\n",
+    "        # plt.title(f'Precision-Recall Curve for {training_sample_subfolder}')\n",
+    "        # plt.grid(True)\n",
+    "        # plt.legend(loc='lower left')\n",
+    "        # clean_name = training_sample_subfolder.replace('-ml', '')\n",
+    "        # save_path = os.path.join('spras-baseline-eval-prc', f\"{clean_name}_prc_curve.png\")\n",
+    "        # plt.savefig(save_path)\n",
+    "        # plt.close()\n",
     "    \n",
     "avg_prec_df = pd.DataFrame(avg_prec_results)\n",
     "out_path = os.path.join('processed-data-files', 'oi2_summary_ap_scores.csv')\n",
@@ -413,11 +415,120 @@
     "# append the new row\n",
     "avg_prec_results = pd.concat([\n",
     "    avg_prec_results,\n",
-    "    pd.DataFrame([{'Sample': trimmed, 'AveragePrecision': ap}])\n",
+    "    pd.DataFrame([{'Sample': trimmed, 'AveragePrecision': ap, 'dataset_label': training_sample_subfolder}])\n",
     "], ignore_index=True)\n",
     "\n",
     "# save updated summary\n",
     "avg_prec_results.to_csv(summary_path, index=False, sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccc99a1b",
+   "metadata": {},
+   "source": [
+    "#### code to match the Oi2 baseline outputs (i.e. dataset label) back to the respective node file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d3354497",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 298 rows; unique labels: 298\n",
+      "Done! Wrote augmented CSV to processed-data-files/oi2_apscore_nodefile.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ——— Parameters ———\n",
+    "csv_path     = 'processed-data-files/oi2_summary_ap_scores.csv'     # the CSV with a column \"label\"\n",
+    "nodes_folder = 'baseline-spras-nodes'     # folder containing *_nodes.txt\n",
+    "\n",
+    "suffix_pattern = re.compile(r'^(.*?)(_train_\\d+\\.txt)$')\n",
+    "\n",
+    "# ——— Step 1: Read the CSV ———\n",
+    "df = pd.read_csv(csv_path, sep='\\t')\n",
+    "print(f\"Loaded {len(df)} rows; unique labels: {df['dataset_label'].nunique()}\")\n",
+    "\n",
+    "# ——— Step 2: Strip the trailing \"-ml\" to get the actual label ———\n",
+    "df[\"clean_label\"] = df[\"dataset_label\"].str.replace(r\"-ml$\", \"\", regex=True)\n",
+    "\n",
+    "# ——— Step 3: Build label→filename map ———\n",
+    "label_to_file = {}\n",
+    "for fname in os.listdir(nodes_folder):\n",
+    "    # get the matching folder\n",
+    "    match = re.search(r'_(\\d{4})_nodes\\.txt$', fname)\n",
+    "    if not match:\n",
+    "        print(fname)\n",
+    "        continue\n",
+    "    year = match.group(1)\n",
+    "    base = fname[:10]\n",
+    "    lbl  = re.sub(r'\\W+', '_', base).strip('_') + f\"_{year}\"\n",
+    "    label_to_file[lbl] = fname\n",
+    "\n",
+    "# ——— Step 4: Lookup and attach ———\n",
+    "df[\"node_file\"] = df[\"clean_label\"].map(label_to_file)\n",
+    "\n",
+    "# Report any that still didn’t match\n",
+    "missing = df[df[\"node_file\"].isna()][\"dataset_label\"].unique()\n",
+    "if len(missing):\n",
+    "    print(f\"Warning: {len(missing)} labels still had no match. Examples: {missing[:5]}\")\n",
+    "\n",
+    "# ——— Step 5: Save the augmented CSV ———\n",
+    "out_csv = 'processed-data-files/oi2_apscore_nodefile.csv'\n",
+    "df.drop(columns=\"clean_label\").to_csv(out_csv, index=False, sep='\\t')\n",
+    "print(f\"Done! Wrote augmented CSV to {out_csv}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0211934c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done! Wrote augmented CSV to processed-data-files/oi2_apscore_nodefile.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# compile once\n",
+    "suffix_pattern = re.compile(r'^(.*?)(_train_\\d+_nodes\\.txt)$')\n",
+    "\n",
+    "def normalize_node_file(fname):\n",
+    "    m = suffix_pattern.match(fname)\n",
+    "    if m:\n",
+    "        prefix, suffix = m.group(1), m.group(2)\n",
+    "        clean = (\n",
+    "            re.sub(r'\\W+', '_', prefix)\n",
+    "              .strip('_')\n",
+    "              .lower()\n",
+    "        )\n",
+    "        return clean + suffix\n",
+    "    else:\n",
+    "        # fallback: normalize entire filename\n",
+    "        return (\n",
+    "            re.sub(r'\\W+', '_', fname)\n",
+    "              .strip('_')\n",
+    "              .lower()\n",
+    "        )\n",
+    "\n",
+    "# apply to the column in-place\n",
+    "df['node_file'] = df['node_file'].apply(normalize_node_file)\n",
+    "out_csv = 'processed-data-files/oi2_apscore_nodefile.csv'\n",
+    "df.drop(columns=\"clean_label\").to_csv(out_csv, index=False, sep='\\t')\n",
+    "print(f\"Done! Wrote augmented CSV to {out_csv}\")"
    ]
   }
  ],
