update config file

--- a/z-code-oi2/copy_training_samples.ipynb
+++ b/z-code-oi2/copy_training_samples.ipynb
@@ -725,15 +725,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Removing empty node files"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src_dir = '../gnn-train-split-samples-nodes/'\n",
+    "\n",
+    "for fname in os.listdir(src_dir):\n",
+    "    path = os.path.join(src_dir, fname)\n",
+    "    # skip sub‐dirs, focus on files\n",
+    "    if not os.path.isfile(path):\n",
+    "        continue\n",
+    "\n",
+    "    # read in only non‐blank lines\n",
+    "    with open(path, 'r') as f:\n",
+    "        lines = [line for line in f if line.strip()]\n",
+    "\n",
+    "    # if there’s 0 lines (empty file) or exactly 1 line (just header), remove it\n",
+    "    if len(lines) <= 1:\n",
+    "        print(f\"Removing empty data file: {fname}\")\n",
+    "        os.remove(path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total files: 656\n"
+      "Total files: 568\n"
      ]
     }
    ],
