--- a/z-code-oi2/make_spras_config_file.ipynb
+++ b/z-code-oi2/make_spras_config_file.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_nodes = [f for f in os.listdir('gnn-train-split-samples-nodes') if f.endswith('.txt')]"
+    "training_nodes = [f for f in os.listdir('../gnn-train-split-samples-nodes') if f.endswith('.txt')]"
    ]
   },
   {
@@ -55,7 +55,7 @@
     "    output_lines.append(f\"      data_dir: \\\"input\\\"\")\n",
     "\n",
     "# Save to file\n",
-    "with open(\"processed-data/datasets_config.txt\", \"w\") as f:\n",
+    "with open(\"../processed-data-files/datasets_config.txt\", \"w\") as f:\n",
     "    f.write(\"\\n\".join(output_lines))\n",
     "\n",
     "print(\"YAML config written to datasets_config.txt\")"
@@ -64,7 +64,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -78,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
