--- a/z-code-evaluation/spras_baseline_eval.ipynb
+++ b/z-code-evaluation/spras_baseline_eval.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "a865ec9e",
    "metadata": {},
    "outputs": [],
@@ -41,18 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "a3d580bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed_pc_pathways_folder = 'processed-pc-individual-pathways'\n",
-    "oi2_baseline_outputs_folder = 'oi2-baseline-outputs'"
+    "processed_pc_pathways_folder = '../processed-pc-individual-pathways'\n",
+    "oi2_baseline_outputs_folder = '../oi2-baseline-outputs'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "71bd9c81",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "ffdc4bf8",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "52beb169",
    "metadata": {},
    "outputs": [
@@ -134,13 +134,13 @@
        "202090"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "union_ppi = pd.read_csv('processed-data-files/union_ppi.txt', sep='\\t', header=None)\n",
+    "union_ppi = pd.read_csv('../processed-data-files/union_ppi.txt', sep='\\t', header=None)\n",
     "union_ppi.rename(columns={0:'Node1', 1:'Node2', 3:'Prize',4:'Directionality'}, inplace=True)\n",
     "\n",
     "union_ppi_length = len(union_ppi)\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "c16614a4",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "2edfe969",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "5c61cad4",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
       "Skipping subfolder 'drug_metab_7643-ml': no matching .txt file with prefix 'drug_metab'\n",
       "Skipping subfolder 'drug_metab_7684-ml': no matching .txt file with prefix 'drug_metab'\n",
       "Skipping subfolder 'drug_metab_8702-ml': no matching .txt file with prefix 'drug_metab'\n",
-      "Wrote summary of average-precision scores to processed-data-files\\oi2_summary_ap_scores.csv\n"
+      "Wrote summary of average-precision scores to ../processed-data-files\\oi2_summary_ap_scores.csv\n"
      ]
     }
    ],
@@ -307,7 +307,7 @@
     "        # plt.close()\n",
     "    \n",
     "avg_prec_df = pd.DataFrame(avg_prec_results)\n",
-    "out_path = os.path.join('processed-data-files', 'oi2_summary_ap_scores.csv')\n",
+    "out_path = os.path.join('../processed-data-files', 'oi2_summary_ap_scores.csv')\n",
     "avg_prec_df.to_csv(out_path, index=False, sep='\\t')\n",
     "print(f\"Wrote summary of average-precision scores to {out_path}\")\n"
    ]
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9215810d",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "d3354497",
    "metadata": {},
    "outputs": [
@@ -440,15 +440,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 298 rows; unique labels: 298\n",
-      "Done! Wrote augmented CSV to processed-data-files/oi2_apscore_nodefile.csv\n"
+      "Loaded 594 rows; unique labels: 297\n",
+      "Done! Wrote augmented CSV to ../processed-data-files/oi2_apscore_nodefile.csv\n"
      ]
     }
    ],
    "source": [
     "# ——— Parameters ———\n",
-    "csv_path     = 'processed-data-files/oi2_summary_ap_scores.csv'     # the CSV with a column \"label\"\n",
-    "nodes_folder = 'baseline-spras-nodes'     # folder containing *_nodes.txt\n",
+    "csv_path     = '../processed-data-files/oi2_summary_ap_scores.csv'     # the CSV with a column \"label\"\n",
+    "nodes_folder = '../baseline-spras-nodes'     # folder containing *_nodes.txt\n",
     "\n",
     "suffix_pattern = re.compile(r'^(.*?)(_train_\\d+\\.txt)$')\n",
     "\n",
@@ -481,52 +481,7 @@
     "    print(f\"Warning: {len(missing)} labels still had no match. Examples: {missing[:5]}\")\n",
     "\n",
     "# ——— Step 5: Save the augmented CSV ———\n",
-    "out_csv = 'processed-data-files/oi2_apscore_nodefile.csv'\n",
-    "df.drop(columns=\"clean_label\").to_csv(out_csv, index=False, sep='\\t')\n",
-    "print(f\"Done! Wrote augmented CSV to {out_csv}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "0211934c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done! Wrote augmented CSV to processed-data-files/oi2_apscore_nodefile.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "import re\n",
-    "\n",
-    "# compile once\n",
-    "suffix_pattern = re.compile(r'^(.*?)(_train_\\d+_nodes\\.txt)$')\n",
-    "\n",
-    "def normalize_node_file(fname):\n",
-    "    m = suffix_pattern.match(fname)\n",
-    "    if m:\n",
-    "        prefix, suffix = m.group(1), m.group(2)\n",
-    "        clean = (\n",
-    "            re.sub(r'\\W+', '_', prefix)\n",
-    "              .strip('_')\n",
-    "              .lower()\n",
-    "        )\n",
-    "        return clean + suffix\n",
-    "    else:\n",
-    "        # fallback: normalize entire filename\n",
-    "        return (\n",
-    "            re.sub(r'\\W+', '_', fname)\n",
-    "              .strip('_')\n",
-    "              .lower()\n",
-    "        )\n",
-    "\n",
-    "# apply to the column in-place\n",
-    "df['node_file'] = df['node_file'].apply(normalize_node_file)\n",
-    "out_csv = 'processed-data-files/oi2_apscore_nodefile.csv'\n",
+    "out_csv = '../processed-data-files/oi2_apscore_nodefile.csv'\n",
     "df.drop(columns=\"clean_label\").to_csv(out_csv, index=False, sep='\\t')\n",
     "print(f\"Done! Wrote augmented CSV to {out_csv}\")"
    ]
