--- a/z-code-oi2/make_spras_config_file.ipynb
+++ b/z-code-oi2/make_spras_config_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,31 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_nodes = [f for f in os.listdir('../gnn-train-split-samples-nodes') if f.endswith('.txt')]"
+    "# training_nodes = [f for f in os.listdir('../gnn-train-split-samples-nodes') if f.endswith('.txt')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "YAML config written to datasets_config.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "test_nodes_df = pd.read_csv('../processed-data-files/test_split_node_files.txt', header=None)\n",
+    "test_nodes_list = sorted(test_nodes_df[0].tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "output_lines = []\n",
     "output_lines.append(\"datasets:\")\n",
     "\n",
-    "for filename in training_nodes:\n",
+    "for filename in test_nodes_list:\n",
     "    match = re.search(r'_(\\d{4})_nodes\\.txt$', filename)\n",
     "    if not match:\n",
     "        continue\n",
@@ -55,16 +57,14 @@
     "    output_lines.append(f\"      data_dir: \\\"input\\\"\")\n",
     "\n",
     "# Save to file\n",
-    "with open(\"../processed-data-files/datasets_config.txt\", \"w\") as f:\n",
-    "    f.write(\"\\n\".join(output_lines))\n",
-    "\n",
-    "print(\"YAML config written to datasets_config.txt\")"
+    "with open(\"../processed-data-files/test_datasets_config.txt\", \"w\") as f:\n",
+    "    f.write(\"\\n\".join(output_lines))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -78,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
