--- a/z-code-evaluation/spras_baseline_eval_test.ipynb
+++ b/z-code-evaluation/spras_baseline_eval_test.ipynb
@@ -412,6 +412,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "1cb93739",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for label in label_to_nodefile.keys():\n",
+    "    src_file = os.path.join(processed_pc_pathways_folder, label_to_nodefile[label])\n",
+    "    dest_file = os.path.join(oi2_baseline_outputs_folder, label)\n",
+    "    shutil.copy(src_file, dest_file)    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "b201e956",
    "metadata": {},
@@ -670,6 +683,48 @@
     "out_csv = '../processed-data-files/oi2_apscore_nodefile_test.csv'\n",
     "df.drop(columns=\"clean_label\").to_csv(out_csv, index=False, sep='\\t')\n",
     "print(f\"Done! Wrote augmented CSV to {out_csv}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "54899004",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total files: 435\n"
+     ]
+    }
+   ],
+   "source": [
+    "folder_path = '../oi2-baseline-outputs-train-split'\n",
+    "files = os.listdir(folder_path)\n",
+    "num_files = len(files)\n",
+    "print(f\"Total files: {num_files}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dace9ac5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total files: 131\n"
+     ]
+    }
+   ],
+   "source": [
+    "folder_path = '../oi2-baseline-outputs-test-split'\n",
+    "files = os.listdir(folder_path)\n",
+    "num_files = len(files)\n",
+    "print(f\"Total files: {num_files}\")"
    ]
   }
  ],
